Fix the header border on mobile

--- a/client/my-sites/domains/domain-management/list/style.scss
+++ b/client/my-sites/domains/domain-management/list/style.scss
@@ -393,10 +393,14 @@
 	display: flex;
 	justify-content: space-between;
 	padding: 8px 0;
-	border-bottom: 1px solid var( --color-neutral-20 );
 	font-size: $font-body-small;
 	font-weight: 600;
 	color: var( --color-neutral-50 );
+
+	border-bottom: 1px solid var( --color-neutral-5 );
+	@include break-mobile {
+		border-bottom: 1px solid var( --color-neutral-20 );
+	}
 
 	.button-plain {
 		text-align: left;
